fix squished images

--- a/platform/platformsh.css
+++ b/platform/platformsh.css
@@ -356,7 +356,6 @@ div.layout-col.vcentered {
 .reveal .layout-fixed-grid img
 {
   max-width: 100%;
-  max-height: 100%;
 }
 
 div.layout-2up-1down {
